fix: fix wrong margin on mobile for admonitions

--- a/assets/scss/ninfa/_admonitions.scss
+++ b/assets/scss/ninfa/_admonitions.scss
@@ -17,3 +17,9 @@
         }
     }
 }
+
+@media only screen and (width <= 768px) {
+    .alert {
+        margin-left: 0;
+    }
+}
